--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Goal Setter App",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "start"  : "node backend/server.js",
+    "server" : "nodemon backend/server.js",
+    "client" : "npm start --prefix frontend"
   },
   "author": "",
   "license": "ISC",
